# cloudimg

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  auth.py  config.py  image.py  storage.py
app/config/: __init__.py  database.py  settings.py
app/core/: auth.py  config_cache.py  exceptions.py  session.py  storage_cache.py
app/core/storages/: __init__.py  aliyun_oss.py  base.py  factory.py  local.py  s3.py
app/models/: __init__.py  base.py  config.py  image.py  storage.py
app/schemas/: auth.py  config.py  image.py  response.py  storage.py
app/services/: __init__.py  config.py  image.py  storage.py
app/utils/: __init__.py  file.py  path.py  thumbnail.py
docs/: AUTHENTICATION_GUIDE.md  CLOUDFLARE_R2_CUSTOM_DOMAIN.md  DATABASE_MIGRATION.md  DATABASE_MIGRATION_001.md  FILENAME_STORAGE_GUIDE.md  STORAGE_CACHE_GUIDE.md
migrations/: env.py
migrations/versions/: 001_add_md5_sha256_to_images.py  001_initial_schema.py
