[project]
name = "cloudimg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "alibabacloud-oss-v2>=1.2.3",
    "fastapi[standard]>=0.128.0",
    "pillow>=12.1.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
